--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "bootstrap": "^5.2.0",
     "jquery": "^3.6.2",
     "json-server": "^0.17.1",
+    "ng2-search-filter": "^0.5.1",
     "ngx-slick-carousel": "^0.6.0",
     "rxjs": "~7.5.0",
     "slick-carousel": "^1.8.1",
