--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "^15.0.0",
+    "@angular/animations": "^15.0.4",
     "@angular/common": "^15.0.0",
     "@angular/compiler": "^15.0.0",
     "@angular/core": "^15.0.0",
@@ -24,6 +24,8 @@
     "ng2-completer": "^9.0.1",
     "ng2-search-filter": "^0.5.1",
     "ngx-slick-carousel": "^0.6.0",
+    "ngx-spinner": "^15.0.1",
+    "ngx-toastr": "^16.0.1",
     "rxjs": "~7.5.0",
     "slick-carousel": "^1.8.1",
     "tslib": "^2.3.0",
