--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@angular/platform-browser": "^15.0.0",
     "@angular/platform-browser-dynamic": "^15.0.0",
     "@angular/router": "^15.0.0",
+    "angular-animations": "^0.11.0",
     "bootstrap": "^5.2.0",
     "jquery": "^3.6.2",
     "json-server": "^0.17.1",
@@ -26,6 +27,7 @@
     "ngx-slick-carousel": "^0.6.0",
     "ngx-spinner": "^15.0.1",
     "ngx-toastr": "^16.0.1",
+    "node-module": "^2.0.0",
     "rxjs": "~7.5.0",
     "slick-carousel": "^1.8.1",
     "tslib": "^2.3.0",
